--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -421,7 +421,7 @@
                 const dy = getDy(point);
 
                 let displayPoint = point;
-                if (player === 'red') {
+                if (player === 'Red') {
                     displayPoint = 25 - point;
                 }
                 ctx.font = 'bold 18px Arial';
