--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -423,7 +423,7 @@
                 let displayPoint = point;
                 if (player === 'Red') {
                     displayPoint = 25 - point; 
-                } else if (player === 'Black') {
+                } else if (player === 'black') {
                     displayPoint = point; 
                 }
                 ctx.font = 'bold 18px Arial';
