--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -420,7 +420,7 @@
                 const dy = getDy(point);
 
                 let displayPoint = point;
-                if (player === 'Red') {
+                if (player === 'red') {
                     displayPoint = 25 - point; // Red sees points inverted (24 at bottom-left, 1 at top-right)
                 } else if (player === 'black') {
                     displayPoint = point; // Black sees points starting from top-right (1 at top-right, 24 at bottom-left)
