--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -490,9 +490,9 @@
                 redPositions = { '24': 2, '6': 5, '8': 3, '13': 5, 'bar': 0, 'off': 0 };
                 blackPositions = { '1': 2, '19': 5, '17': 3, '12': 5, 'bar': 0, 'off': 0 };
             } else {
-                turn = turn - 1;
-                redPositions = data[turn].positions['red'];
-                blackPositions = data[turn].positions['black'];
+                const prevTurn = turn - 1;
+                redPositions = data[prevTurn].positions['red'];
+                blackPositions = data[prevTurn].positions['black'];
             }
 
             const currentPlayer = data[turn].player.toLowerCase();
